tests/ui/feature-gates/feature-gate-cfg-target-thread-local.stderr
error[E0658]: `cfg(target_thread_local)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-thread-local.rs:9:16
   |
LL |     #[cfg_attr(target_thread_local, thread_local)]
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29594 <https://github.com/rust-lang/rust/issues/29594> for more information
   = help: add `#![feature(cfg_target_thread_local)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/feature-gate-cfg-target-thread-local.rs:15:16
   |
LL |     assert_eq!(FOO, 3);
   |                ^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0133, E0658.
For more information about an error, try `rustc --explain E0133`.
